--- a/index.html
+++ b/index.html
@@ -15,18 +15,26 @@
     <p>Hey there! Welcome to NerdsUnited Games, our indie game company that started in Washington HighSchool. We're just bunch of kids who simply love playing games and wanted to share that excitement by creating games of our own. What makes us special is the super welcoming and supportive community we've built around here.
         One thing we cherish is that everyone's at different skill levels in game design. It doesn't matter if you're a total newbie or a seasoned pro; we've got a spot for you! We believe that game design is all about fun and creativity, and there's no pressure to be a hardcore developer. We just want to people to enjoy themselves together and learn from one another.
         So if you're passionate about games and looking for a chill and laid-back community that's all about making games and having a good time, come hang out with us at NerdsUnited Games. You'll make awesome friends, learn a bunch, and who knows, we might just create the next big game! See you around!</p>
-
+    <div class = "contacts">
+    <nav>
+        <ul>
+            <li>
     <a href="Founders.html" target=_self title="Meet the Founders"> 
         Founders
     </a>
+</li>
 
     <br>
     <br>
-
+<li>
     <a href="Contacts.html" target=_self title="if you want to join">
         How to Contact Us
     </a>
-
+</li>
+</ul>
+    </nav>
+    </div>
+    <div id = "games">
     <h1>Here are Some of Our Games</h1>
 
     <iframe frameborder="0" src="https://itch.io/embed/2142728?border_width=0" width="550" height="165">
@@ -45,5 +53,6 @@
     <h3>3d person racing game (not compatible with itch.io)</h3>
     <h1>Dungeon Fighter</h1>
     <h3>First person VR Dungeon RogueLite</h3>
+    </div>
 </body>
 </html>
